--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
   </head>
+  
 
   <body>
     <h1>CSS INTRODUCTION</h1>
@@ -48,6 +49,10 @@
   of an HTML document. Most commonly, CSS is combined with the markup languages HTML
   or XHTML.</p>
 
+  <button class="btn">Click Me</button>
+
   </body>
+
+  <script src="scripts/index.js"></script>
 
 </html>
